force-app/main/default/objects/Bed_Occupancy__c/Bed_Occupancy__c.object-meta.xml
<CustomObject>
    <label>Bed Occupancy</label>
    <nameField>
        <label>Bed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bed Occupancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>