force-app/main/default/objects/Bed_Occupancy__c/fields/Bed_occupied__c.field-meta.xml
<CustomField>
    <fullName>Bed_occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bed occupied</label>
    <type>Checkbox</type>
</CustomField>