force-app/main/default/objects/Bed_Occupancy__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bed Occupancies</relationshipLabel>
    <relationshipName>Bed_Occupancies</relationshipName>
    <type>Lookup</type>
</CustomField>