force-app/main/default/objects/Bed_Occupancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bed_occupied__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Patient__c</columns>
    <columns>Wards_and_Private_Rooms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>