force-app/main/default/objects/Bed_Occupancy__c/listViews/New_list.listView-meta.xml
<ListView>
    <fullName>New_list</fullName>
    <columns>NAME</columns>
    <columns>Bed_occupied__c</columns>
    <columns>Wards_and_Private_Rooms__c</columns>
    <filterScope>Mine</filterScope>
    <label>New list</label>
</ListView>